# masters_thesis

./: .gitignore  01_GVC_Measure.ipynb  GVC Measure w Layer 0 + 1.ipynb  GVC_D4_D5_Diagnostic_run1.ipynb  Master_Plan.md  README.md  gvc_d4_d5_diagnostic_results run 1.csv  layer1_nli_scores.csv  layer1_nli_scores_hs92.csv  pyproject.toml
Annotations/: GVC Annotation Tool w Saving.html  GVC_Annotation_Guidelines.docx  annotation_batch_A.csv  annotation_batch_B.csv  annotation_batch_C.csv  annotation_batch_D.csv  annotation_overlap_A.csv  annotation_overlap_B.csv  annotation_overlap_C.csv  annotation_overlap_D.csv  create_annotation_batches.py  gvc_annotation_tool.html  gvc_d4_d5_diagnostic_results.csv  merge_annotations.py
config/: config.py  paths.yaml
econometrics/notebooks/: GVC Measure w Layer 0 + 1_updated.ipynb
econometrics/src/: baci_loader.py  usage_example.py
network analysis/: README.md  baci_analysis.ipynb  baci_network_analysis.ipynb  build_baci_artifacts.py  build_plaid_edges.py  build_semi_edges.py  build_tariff_edges.py  build_tariff_master.py  fdva_network.py  long_run_metrics_by_bec.py  long_run_metrics_microchip.py  long_run_metrics_semi.py  long_run_metrics_tariff.py  long_run_network_metrics.py  resilience_aggregate.py  resilience_by_subnetwork.py  tables_friendshoring.py  thesis_preliminary_analysis.tex  viz_added_value.py  viz_bec_comparison.py  viz_friendshoring_hs6.py  viz_resilience.py  viz_resilience_compare.py  viz_tariff_strata.py
network analysis/tables/: friendshoring_connector_sources.csv  (+1 more)
src/: paths.R  paths.py
(+28 files in other folders)
