[project]
name = "masters-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.0",
    "numpy>=1.24.0",
    "psycopg2-binary>=2.9.0",
    "transformers>=5.8.0",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
]
