[project]
name = "masters-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "sqlalchemy>=2.0.0",
    "numpy>=1.24.0",
    "psycopg2-binary>=2.9.0",
    "transformers>=4.40.0",
    "sentencepiece>=0.1.99",
    "torch>=2.0.0",
    "python-dotenv>=1.0.0",
    "ipywidgets>=8.0.0",
    "pyarrow>=24.0.0",
    "fastparquet>=2026.5.0",
]
